<resources>
    <string name="app_name">Pokedex</string>
    <string name="pokemon_img">Image of pokemon</string>
    <string name="error">This error means that data cannot be found.</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="base_stats">Base Stats</string>
    <string name="hp">HP</string>
    <string name="atk">ATK</string>
    <string name="def">DEF</string>
    <string name="spd">SPD</string>
    <string name="exp">EXP</string>
    <string name="loading">Loading…</string>
</resources>